# annotex

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  Dockerfile  Makefile  README.md  claude.md  docker-compose.yml  eks-cluster.yml  pyproject.toml  requirements.txt
.github/workflows/: cd-kind.yml  cd.yml  ci.yml
.zap/: rules.tsv
alembic/: env.py
alembic/versions/: 001_initial_schema.py
annotation-service/: .env.example  README.md  docker-compose.yml  requirements.txt
annotation-service/app/api/: deps.py
annotation-service/app/core/: logging.py
annotation-service/app/db/: session.py
annotation-service/app/schemas/: __init__.py
annotation-service/app/services/: __init__.py  annotation_renderer.py  ocr_service.py  segmentation_service.py
annotation-service/app/workers/: celery_app.py  tasks.py
annotation-service/tests/: __init__.py  conftest.py
annotation-service/tests/test_api/: test_evaluation.py  test_health.py  test_model_answers.py
annotation-service/tests/test_services/: test_evaluation_engine.py
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  evaluation.py  model_answers.py  submissions.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/models/: __init__.py  database.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  annotation_renderer.py  evaluation_engine.py  ocr_service.py  segmentation_service.py  storage_service.py
app/workers/: celery_app.py  tasks.py
docs/: CI_CD.md  README.md  TESTING.md
k8s/: configmap.yml  deployment.yml  secrets.yml  service.yml
k8s/kind/: cluster-config.yml  postgres.yml  redis.yml  service.yml
scripts/: kind-deploy.sh
tests/: conftest.py
tests/test_api/: test_evaluation.py  test_health.py  test_model_answers.py
tests/test_services/: test_evaluation_engine.py  test_segmentation.py  test_storage.py
